# py-template

./: README.md  pyproject.toml
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
docs/: datamodel_coroutine.md  lib_click.md  lib_langgraph.md  lib_pydantic.md  lib_rich.md  lib_typer.md  python-basic.md  python-vscode-dev-env.md  references.md  stdlib_readline.md  type_system.md  type_system_stub_files.md
src/aiomysql/: main.py
src/asyncio/: condition.py  cpu_intensive_tasks.py  event_loop.py  future.py  main.py  test_event_loop.py
src/basic/: async_with.py  asynccontextmanager.py  build_in_functions.py  builtin_property.py  control_flow_positional_keyword_args.py  datamodel_metaclasses.py  datamodel_objects.py  decorator.py  decorator_dataclasses.py  exhaustiveness_checking.py  generator.py  graceful_shutdown.py  literal.py  mark_unreachable.py  number.py  oop.py  pythonpath.py  special_attributes_and_methods.py  structural_typing.py  type_narrowing.py  typing_annotated.py  typing_forward_reference.py  typing_generic.py  typing_overloads.py  unreachable_checking.py  with.py
src/basic/coroutine/: coroutine.py  event_loop.py
src/basic/pool/: conn.py  pool.py  test_pool.py  utils.py
src/click/: cli.py
src/collections/: deque.py  lists.py
src/data_structure/: list_comprehensions.py
src/pydantic/: main.py
src/readline/: main.py
src/typer/: main.py
src/unit_test/: unittest.py
