[project]
name = "py-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncio>=3.4.3",
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "typing-extensions>=4.13.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
